...
        return 1
    }

    override func tableView(_ tableView: UITableView, titleForHeaderInSection section: Int) -> String? {
        switch section {
        case 2:
            return "App Description"
        case showMyContributions ? 3 : -1:
            return "My Contributions"
        case showMyContributions ? 4 : 3:
            return libraries.count > 0 ? "API/Libraries Used" : nil
        default:
            return nil
...

    func textViewDidEndEditing(_ textView: UITextView) {
        if textView.text.isEmpty {
            let placeholderText: String
            switch textView.tag {
            case 0:
                placeholderText = "App Name"
            case 1:
                placeholderText = "App Description"
            default:
                placeholderText = "My Contributions"
                myContributions = nil
            }
...
