...
        alert.addTextField { textField in
            textField.placeholder = "Name"
            nameTextField = textField
        }

        let cancel = UIAlertAction(title: "Cancel", style: .cancel, handler: nil)
        let done = UIAlertAction(title: "Save", style: .default) { _ in
            guard let name = nameTextField?.text else { return }
            self.libraryController.create(libraryNamed: name, context: CoreDataStack.shared.mainContext)
        }

        alert.addAction(cancel)
        alert.addAction(done)
...
