...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="gl7-F5-AF4" id="CAt-FV-LgV"/>
                            <outlet property="delegate" destination="gl7-F5-AF4" id="Nlk-zJ-1ut"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Apps" id="vT2-ua-vuV">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="beX-kP-pb6">
                            <connections>
                                <action selector="addApp:" destination="gl7-F5-AF4" id="Lm7-Ur-L0l"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
